--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
                 <div class="header__menu-burger">
                     <div class="header__menu-box">
-                        <a href="components\courses\course.html" class="header__menu-burger-link">Курсы</a>
+                        <a href="course.html" class="header__menu-burger-link">Курсы</a>
                         <a href="#" class="header__menu-burger-link _smooth-link" data-goto=".teachers">Преподаватели</a>
                         <a href="#" class="header__menu-burger-link _smooth-link" data-goto=".close-event">Мероприятия</a>
-                        <a href="components\registration\enterWindow.html" class="header__menu-burger-link">Личный кабинет</a>
+                        <a href="enterWindow.html" class="header__menu-burger-link">Личный кабинет</a>
                     </div>
                 </div>
         </div>
@@ -33,9 +33,9 @@
                 <a href="#" class="footer__logo-link"><span>Your</span><span class="header__span-green">Eng</span></a>
             </div>
             <div class="header__medium-text">
-                <a href="components\courses\course.html">Курсы</a><a href="#" class="_smooth-link" data-goto=".teachers">Преподаватели</a><a href="#" class="_smooth-link" data-goto=".close-event">Мероприятия</a>
+                <a href="course.html">Курсы</a><a href="#" class="_smooth-link" data-goto=".teachers">Преподаватели</a><a href="#" class="_smooth-link" data-goto=".close-event">Мероприятия</a>
             </div>
-            <div class="header__personal-cabinet"><a href="components\registration\enterWindow.html">Личный кабинет</a></div>
+            <div class="header__personal-cabinet"><a href="enterWindow.html">Личный кабинет</a></div>
             
         </div>
 
@@ -312,7 +312,7 @@
                     <div class="programms__card-footer">
                         <p class="programms__card-cost">от <span>600 руб.</span>
                             за занятие</p>
-                        <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                        <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                     </div>
                 </div>
 
@@ -323,7 +323,7 @@
                     <div class="programms__card-footer">
                         <p class="programms__card-cost">от <span>600 руб.</span>
                             за занятие</p>
-                            <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                            <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                     </div>
                 </div>
 
@@ -334,7 +334,7 @@
                     <div class="programms__card-footer">
                         <p class="programms__card-cost">от <span>600 руб.</span>
                             за занятие</p>
-                            <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                            <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                     </div>
                 </div>
             </div>
@@ -352,7 +352,7 @@
                             <div class="programms__card-footer">
                                 <p class="programms__card-cost">от <span>600 руб.</span>
                                     за занятие</p>
-                                    <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                    <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
                     </div>
@@ -365,7 +365,7 @@
                             <div class="programms__card-footer">
                                 <p class="programms__card-cost">от <span>600 руб.</span>
                                     за занятие</p>
-                                    <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                    <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@
                             <div class="programms__card-footer">
                                 <p class="programms__card-cost">от <span>600 руб.</span>
                                     за занятие</p>
-                                    <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                    <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
                     </div>
@@ -391,13 +391,13 @@
                             <div class="programms__card-footer">
                                 <p class="programms__card-cost">от <span>600 руб.</span>
                                     за занятие</p>
-                                    <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                    <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <a href="components\courses\course.html" class="_link-green programms__link-size"><span>Все курсы</span></a>
+            <a href="course.html" class="_link-green programms__link-size"><span>Все курсы</span></a>
         </div>
 
 
@@ -434,7 +434,7 @@
                             </p>
                             <div class="card__footer">
                                 <div class="card__price">1000 руб.</div>
-                                <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
     
@@ -449,7 +449,7 @@
                                 быстрее.</p>
                             <div class="card__footer">
                                 <div class="card__price">Бесплатно</div>
-                                <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
 
@@ -462,7 +462,7 @@
                                 в английском языке на практике</p>
                             <div class="card__footer">
                                 <div class="card__price">1000 руб.</div>
-                                <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
 
@@ -475,7 +475,7 @@
                                 конструкцией “There + to be”</p>
                             <div class="card__footer">
                                 <div class="card__price">1000 руб.</div>
-                                <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
 
@@ -489,7 +489,7 @@
                                 с носителями языка</p>
                             <div class="card__footer">
                                 <div class="card__price">2000 руб.</div>
-                                <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
 
@@ -503,7 +503,7 @@
                                 техник запоминания и повторения</p>
                             <div class="card__footer">
                                 <div class="card__price">500 руб.</div>
-                                <a href="components\course_eng-for-travel\course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
+                                <a href="course_eng-for-travel.html" class="card__link _link-white">Подробнее</a>
                             </div>
                         </div>
 
@@ -790,7 +790,7 @@
                         <a href="#" class="footer__logo-link"><span class="_smooth-link" data-goto=".full-screen-wrapper">Your</span><span class="header__span-green _smooth-link" data-goto=".full-screen-wrapper">Eng</span></a> 
                     </div>
                     <ul>
-                        <li><a href="components\courses\course.html">Курсы</a></li>
+                        <li><a href="course.html">Курсы</a></li>
                         <li><a href="#" class="_smooth-link" data-goto=".teachers">Преподаватели</a></li>
                         <li><a href="#" class="_smooth-link" data-goto=".close-event">Мероприятия</a></li>
                         <li><a href="#">Личный кабинет</a></li>
