--- a/enterWindow.html
+++ b/enterWindow.html
@@ -31,7 +31,7 @@
                             <a href="#" class="registration__password">Забыли пароль?</a>
                         </div>
                         <button class="modal__button _button-green registration__button">Войти</button>
-                        <a href="components\registration\registrationWindow.html" class="modal__button _link-green registration__button">Зарегистрироваться</a>
+                        <a href="registrationWindow.html" class="modal__button _link-green registration__button">Зарегистрироваться</a>
                     </form>
                 </div>
             </div>
