--- a/course.html
+++ b/course.html
@@ -20,7 +20,7 @@
                     <a href="index.html" class="header__menu-burger-link">Главная</a>
                     <a href="index.html#teachers" class="header__menu-burger-link">Преподаватели</a>
                     <a href="index.html#close-event" class="header__menu-burger-link">Мероприятия</a>
-                    <a href="components\registration\enterWindow.html" class="header__menu-burger-link">Личный кабинет</a>
+                    <a href="enterWindow.html" class="header__menu-burger-link">Личный кабинет</a>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
             <div class="header__medium-text">
                 <a href="#">Курсы</a><a href="index.html#teachers">Преподаватели</a><a href="index.html#close-event">Мероприятия</a>
             </div>
-            <div class="header__personal-cabinet"><a href="components\registration\enterWindow.html">Личный кабинет</a></div>
+            <div class="header__personal-cabinet"><a href="enterWindow.html">Личный кабинет</a></div>
         </div>
 
         <div class="full-screen-wrapper">
@@ -197,7 +197,7 @@
                             <a href="#" class="footer__logo-link"><span>Your</span><span class="header__span-green">Eng</span></a> 
                         </div>
                         <ul>
-                            <li><a href="components\courses\course.html">Курсы</a></li>
+                            <li><a href="course.html">Курсы</a></li>
                             <li><a href="index.html#teachers">Преподаватели</a></li>
                             <li><a href="index.html#close-event">Мероприятия</a></li>
                             <li><a href="#">Личный кабинет</a></li>
