--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
 
                 <div class="feedback__card">
                     <div class="feedback__user-information">
-                        <img src="Gleb.cf643244.png" alt="Mylvych" class="feedback__img">
+                        <img src="gleb.cf643244.png" alt="Mylvych" class="feedback__img">
                         <div class="feedback__user-information-text">
                             <p class="feedback__name">Глеб</p>
                             <p class="feedback__direction">Английский для путешествий</p>
